# Money_keeper

./: .gitignore  CMakeLists.txt  README.md  main.cpp
core/: Account.cpp  Account.hpp  Date.hpp  File_Manager.cpp  FinanceCore.cpp  FinanceCore.hpp  Menu_Handlers.cpp  Statistics.cpp  Time_Manager.hpp  Transactions.cpp
core/currency/: CurrencyConverter.cpp  CurrencyConverter.hpp  CurrencyFetcher.cpp  CurrencyFetcher.hpp
core/currency/curl/: CurlHttpClient.cpp  CurlHttpClient.hpp
docs/: Doxyfile  mainpage.h
main_parts/: Date.hpp  Time_Manager.hpp
